
Version 1:
@startuml

skinparam wrapWidth 300

hide circle
hide empty members

entity Kunde #White {
   <size:13> PK: id
   --
   * <size:12> name
   --
   * <size:12> addresse
   --
   * <size:12> tlfNummer
   --
   * <size:12> email
}

entity Carport #White {
   <size:13> PK: id
   --
   * <size:12> bredde
   --
   * <size:12> længde
   --
   * <size:12> rejsning
   --
   * <size:12> FK: skurId
}

entity Skur #White {
   <size:13> PK: id
   --
       * <size:12> bredde
   --
   * <size:12> længde
}


entity Ordre  #White {
   <size:13> PK: id
   --
   * <size:12> tilbudsDato
   --
   * <size:12> ordreDato
   --
   * <size:12> leveringsDato
   --
   <size:13> FK: kundeId
   --
   <size:13> FK: sælgerId
   --
   <size:13> FK: carportId
   --
   * <size:12> pris
   --
   * <size:12> status
    <size:12>( tilbud / ordre / afsluttet / afslået )
}

entity Materialer #White {
   <size:13> PK: id
   --
   * <size:12> name
   --
   * <size:12> enhed
   --
   * <size:12> længde
   --
   * <size:12> pris
}

entity StyklisteLinje #White {
   <size:13> PK: id
   --
  <size:13> FK: ordreId
   --
   <size:13> FK: materialeId
   --
   * <size:12> antal
}

entity Sælger #White {
   <size:13> PK: id
   --
   * <size:12> name
}




Kunde <|- Ordre
Sælger <|-- Ordre
Carport <|-- Ordre
Skur <|-- Ordre
Ordre <|-- StyklisteLinje
Materialer <|-- StyklisteLinje
@enduml

Version 2:
@startuml

skinparam wrapWidth 300

hide circle
hide empty members

entity Kunde #White {
   <size:13> PK: email
   --
   * <size:12> name
   --
   * <size:12> addresse
   --
   * <size:12> tlfNummer
   --
   * <size:12> salt
   --
   * <size:12> secret
}

entity Carport #White {
   <size:13> PK: id
   --
   * <size:12> bredde
   --
   * <size:12> længde
   --
   * <size:12> rejsning
   --
   * <size:12> tag
   --
   * <size:12> skurBredde
   --
   * <size:12> skurLængde
}


entity Ordre  #White {
   <size:13> PK: id
   --
   * <size:12> tilbudsDato
   --
   * <size:12> ordreDato
   --
   * <size:12> leveringsDato
   --
   <size:13> FK: kundeEmail
   --
   <size:13> FK: sælgerId
   --
   <size:13> FK: skurId
   --
   <size:13> FK: carportId
   --
   * <size:12> pris
   --
   * <size:12> status
    <size:12>( tilbud / ordre / afsluttet / afslået )
}

entity unitMaterialer #White {
   <size:13> PK: materialeId (FK)
   --
   * <size:12> unitType
}

entity volumeMaterialer #White {
   <size:13> PK: materialeId (FK)
   --
   * <size:13> bredde
   --
   * <size:13> højde
   --
   * <size:13> længde
}

entity Materialer #White {
   <size:13> PK: id
   --
   * <size:12> name
   --
   * <size:12> pris
}

entity StyklisteLinje #White {
   <size:13> PK: id
   --
  <size:13> FK: ordreId
   --
   <size:13> FK: materialeId
   --
   * <size:12> antal
}

entity Sælger #White {
   <size:13> PK: id
   --
   * <size:12> name
}




Kunde <|- Ordre
Sælger <|-- Ordre
Carport <|-- Ordre
Ordre <|-- StyklisteLinje
Materialer <|-- StyklisteLinje
Materialer <|-- volumeMaterialer
Materialer <|-- unitMaterialer
@enduml




object Object01
object Object02
object Object03
object Object04
object Object05
object Object06
object Object07
object Object08

Object01 <|-- Object02
Object03 *-- Object04
Object05 o-- "4" Object06
Object07 .. Object08 : some labels
@enduml
